--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
       <a-entity position="20.1 2.5 -6">
         <a-sound src="#my-video" autoplay="true" loop="true" positional="true" distancemodel="linear" maxdistance="5"></a-sound>
       </a-entity>
+
+      <a-sound src="src: url(sounds\cosmic-glow-6703.mp3)" autoplay="true" volume="0.1" loop="true"></a-sound>
+      
       <!--look pared frontal-->
       <a-image position="22.5 2.3 9.94" rotation="0 180 0" width="4.7" height="5.8" src="https://cdn.glitch.global/77442dc5-295d-4d9d-8af2-a6039e1cd5f2/94.png?v=1717065491610"> </a-image>
       <a-image position="25.5 2.3 9.94" rotation="0 180 0" width="4.7" height="5.8" src="https://cdn.glitch.global/77442dc5-295d-4d9d-8af2-a6039e1cd5f2/37.png?v=1717065639984"> </a-image>
