--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <title>Irene Jácome</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.2.0/dist/aframe-extras.min.js"></script>
+    <meta name="apple-mobile-web-app-capable" content="yes">
   </head>
   <body>
     <a-scene>
@@ -111,7 +112,7 @@
       
       <!--video pared izq-->
    <a-assets>
-        <video id="my-video" src="https://cdn.glitch.me/77442dc5-295d-4d9d-8af2-a6039e1cd5f2/RPReplay_Final1717536469.mov?v=1717537708442" autoplay loop="true"></video>
+        <video id="my-video" src="https://cdn.glitch.me/77442dc5-295d-4d9d-8af2-a6039e1cd5f2/RPReplay_Final1717536469.mov?v=1717537708442" autoplay loop="true" playsinline></video>
       </a-assets>
 
       <a-video 
