--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <a-scene>
          <a-sky color= "#BFF6FA"></a-sky>
 
+      <!-- Movimiento móvil -->
+        <a-entity movement-controls="fly: true" position="0 0 0">
+            <a-entity camera position="0 0 0" look-controls></a-entity>
+          
       <!-- SALA 1 -->
       <a-entity position="0 2 0">
         <a-sound src="https://cdn.glitch.global/77442dc5-295d-4d9d-8af2-a6039e1cd5f2/Sex%20Pistols%20-%20God%20Save%20The%20Queen.mp3?v=1717015667634" autoplay="true" loop="true" 
